--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^5.2.3",
     "axios": "^1.3.3",
     "moment": "^2.29.4",
+    "pubsub-js": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
