--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "moment": "^2.29.4",
     "pubsub-js": "^1.9.4",
     "react": "^18.2.0",
+    "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-json-view": "^1.21.3",
     "react-router-dom": "^6.8.1",
