--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-navigation/native": "^6.1.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,6 +15,7 @@
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
     "react-json-view": "^1.21.3",
+    "react-native-web": "^0.18.12",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-tag-input-component": "^2.0.2",
