--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.2.2",
     "axios": "^1.3.3",
+    "jsoneditor": "^9.10.0",
+    "jsoneditor-react": "^3.1.2",
     "moment": "^2.29.4",
     "pubsub-js": "^1.9.4",
     "react": "^18.2.0",
