--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-datepicker": "^4.10.0",
     "react-dom": "^18.2.0",
+    "react-json-editor-ajrm": "^2.5.14",
     "react-json-view": "^1.21.3",
     "react-native-web": "^0.18.12",
     "react-redux": "^8.0.5",
