--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jsoneditor": "^9.10.0",
     "jsoneditor-react": "^3.1.2",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "pubsub-js": "^1.9.4",
     "react": "^18.2.0",
     "react-datepicker": "^4.10.0",
