--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-# REACT_APP_SERVER_API=http://localhost:10880/api/
-REACT_APP_SERVER_API=http://116.205.167.248:10880/api/
+REACT_APP_SERVER_API=http://localhost:10880/api/
